--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 </head>
 <body>
     <h1>Bienvenue chez RainbowArt !</h1>
-    <p>Découvrez notre art à travers des couleurs vibrantes et des motifs uniques.</p>
+    <p>Découvrez notre art à travers des couleurs vibrantes et des motifs .</p>
 </body>
 </html>
